fixed some styles on mobile

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ button {
   border: 1px solid rgb(96, 101, 130);
   background-color: rgb(25, 26, 33);
   color:white;
-  padding: 20px 15px;
+  padding: 20px 25px;
   border-radius:4px;
   margin:30px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
